[FIX] hotelname section: removed position absolute and styled elements with the help of margins and display block. aligned elements to the rest of the project (i.e. navbar)

--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,11 @@ input::placeholder {
 }
 
 .topnavbar__item--item-two-distance {
-    margin-left: 245px;
+    margin-left: 415px;
+}
+
+.topnavbar__item--item-three-distance {
+    margin-left: -20px;
 }
 
 .topnavbar__text1 {
@@ -129,7 +133,7 @@ input::placeholder {
 }
 
 .midnavbar__logo {
-    margin-left: 7.8125vw;
+    margin-left: 100px;
     width: 176px;
     height: 19px;
 }
@@ -143,12 +147,12 @@ input::placeholder {
 .midnavbar__img2 {
     width: 34px;
     height: 34px;
-    margin-right: -77vw;
+    margin-right: -1335px;
 }
 
 .midnavbar__item-userbox {
     width: 10.41%;
-    margin-left: 51.55vw;
+    margin-left: 721px;
     height: 40px;
 }
 
@@ -176,25 +180,24 @@ input::placeholder {
 /* Bottom navbar styles */
 
 .bottomnavbar {
-    position: absolute;
     background-color: #0a223d;
-    width: 1440px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -15px;
     height: 80px;
-    left: 0px;
-    top: 180px;
 }
 
 .bottomnavbar__list {
-    margin-left: 84px;
-    width: 1185px;
+    margin-left: 60px;
 }
 
 .bottomnavbar__list-item {
     display: inline-flex;
     flex-direction: row;
-    margin-top: 15.5px;
     justify-content: space-around;
-    padding: 0 41px;
+    padding: 0 38px;
+    margin-top: 31px;
     color: #ffffff;
     text-transform: uppercase;
     text-align: center;
@@ -208,12 +211,10 @@ input::placeholder {
 /* Bread crumb styles */
 
 .breadcrumb {
-    position: absolute;
-    width: 186px;
+    width: 200px;
     height: 50px;
-    left: 147px;
-    top: 260px;
     padding: 10px 16px;
+    margin-left: 80px;
     background: #f5fafe;
 }
 
@@ -235,28 +236,26 @@ input::placeholder {
 /* Hotel name styles */
 
 .hotelname {
-    position: absolute;
-    width: 1440px;
+    display: block;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
     height: 100px;
-    left: 0px;
-    top: 300px;
     background: #f5fafe;
 }
 
+.hotelname__grand-hotel-hilton {
+    margin-left: 97px;
+}
+
 .hotelname__stars {
-    position: absolute;
     width: 48px;
     height: 8px;
-    left: 165px;
-    top: 23px;
 }
 
 .hotelname__header {
-    position: absolute;
     width: 268px;
     height: 30px;
-    left: 165px;
-    top: 35px;
     font-family: Mulish;
     text-transform: uppercase;
     font-weight: 700;
@@ -266,11 +265,8 @@ input::placeholder {
 }
 
 .hotelname__text1 {
-    position: absolute;
     width: 389px;
     height: 15px;
-    left: 165px;
-    top: 75px;
     font-family: Mulish;
     font-size: 12px;
     line-height: 15px;
@@ -280,53 +276,51 @@ input::placeholder {
 .hotelname__offer {
     width: 70px;
     height: 20px;
-    left: 447px;
-    top: 55px;
-    position: absolute;
     background: #ec1f46;
     border-radius: 3px;
+    margin-left: 370px;
+    margin-top: -65px;
 }
 
 .hotelname__ratings {
     width: 65px;
     height: 45px;
-    left: 1200px;
-    top: 55px;
-    position: absolute;
     background: #ec1f46;
     border-radius: 3px;
+    margin-left: 1093px;
+    margin-top: -54.5px;
 }
 
 .hotelname__text2 {
-    position: absolute;
-    width: 52px;
+    display: block;
+    width: 74%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 3px;
     height: 13px;
-    left: 10px;
-    top: -6.4px;
     font-weight: 600;
     font-size: 10px;
     line-height: 13px;
-    text-align: center;
 }
 
 .hotelname__text3 {
-    position: absolute;
-    width: 52px;
+    display: block;
+    width: 74%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 3px;
     height: 13px;
     font-size: 8px;
-    left: 7px;
-    top: -3.9px;
     line-height: 13px;
-    text-align: center;
 }
 
 .hotelname__ratings-mark {
-    position: absolute;
     width: 31px;
     height: 18px;
-    left: 15px;
-    top: 0px;
-    margin-top: 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: -25px;
     line-height: 18px;
 }
 
